<?xml version="1.0" encoding="UTF-8"?>
<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="15705" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
    <device id="retina6_1" orientation="portrait" appearance="light"/>
    <dependencies>
        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="15706"/>
        <capability name="Safe area layout guides" minToolsVersion="9.0"/>
        <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
    </dependencies>
    <scenes>
        <!--Profile-->
        <scene sceneID="Jai-Qh-AqR">
            <objects>
                <viewController id="zst-2p-aBd" customClass="ClientProfileViewController" customModule="AnytimeFitness" customModuleProvider="target" sceneMemberID="viewController">
                    <view key="view" contentMode="scaleToFill" id="2MR-0i-jSZ">
                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="person.circle" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="HUI-P8-kXc">
                                <rect key="frame" x="132" y="160.5" width="150" height="149"/>
                                <color key="tintColor" red="0.96971672769999995" green="0.61454814670000002" blue="0.14207831030000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="150" id="4nZ-hQ-s37"/>
                                    <constraint firstAttribute="width" constant="150" id="kHY-Xs-6g8"/>
                                </constraints>
                            </imageView>
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="John Doe" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="MBv-JG-yof">
                                <rect key="frame" x="135" y="330" width="144" height="42"/>
                                <fontDescription key="fontDescription" type="system" pointSize="35"/>
                                <nil key="textColor"/>
                                <nil key="highlightedColor"/>
                            </label>
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="JohnDoe@email.com" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="k61-f3-g02">
                                <rect key="frame" x="126" y="402" width="162" height="20.5"/>
                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                <nil key="textColor"/>
                                <nil key="highlightedColor"/>
                            </label>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="eph-w3-4ql">
                                <rect key="frame" x="157" y="733" width="100" height="30"/>
                                <color key="backgroundColor" red="0.96971672769999995" green="0.61454814670000002" blue="0.14207831030000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                <constraints>
                                    <constraint firstAttribute="width" constant="100" id="myn-CO-XDd"/>
                                </constraints>
                                <state key="normal" title="Sign Out">
                                    <color key="titleColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
                                </state>
                                <connections>
                                    <action selector="signOutPressed:" destination="zst-2p-aBd" eventType="touchUpInside" id="qbI-Ha-XcP"/>
                                    <segue destination="EWt-WG-dnc" kind="presentation" modalPresentationStyle="fullScreen" id="kxS-zi-XRZ"/>
                                </connections>
                            </button>
                        </subviews>
                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                        <constraints>
                            <constraint firstItem="HUI-P8-kXc" firstAttribute="top" secondItem="Ix3-G0-ppq" secondAttribute="top" constant="20" id="3YE-Ry-ZrE"/>
                            <constraint firstItem="MBv-JG-yof" firstAttribute="centerX" secondItem="2MR-0i-jSZ" secondAttribute="centerX" id="7Ng-iq-OC1"/>
                            <constraint firstItem="k61-f3-g02" firstAttribute="top" secondItem="MBv-JG-yof" secondAttribute="bottom" constant="30" id="DAz-h9-6bc"/>
                            <constraint firstItem="MBv-JG-yof" firstAttribute="top" secondItem="HUI-P8-kXc" secondAttribute="bottom" constant="20" id="RHg-9y-peH"/>
                            <constraint firstItem="Ix3-G0-ppq" firstAttribute="bottom" secondItem="eph-w3-4ql" secondAttribute="bottom" constant="50" id="RZc-X0-L2e"/>
                            <constraint firstItem="k61-f3-g02" firstAttribute="centerX" secondItem="2MR-0i-jSZ" secondAttribute="centerX" id="ph4-7F-RiS"/>
                            <constraint firstItem="HUI-P8-kXc" firstAttribute="centerX" secondItem="2MR-0i-jSZ" secondAttribute="centerX" id="uEj-u6-sL9"/>
                            <constraint firstItem="eph-w3-4ql" firstAttribute="centerX" secondItem="2MR-0i-jSZ" secondAttribute="centerX" id="vI4-pb-4lY"/>
                        </constraints>
                        <viewLayoutGuide key="safeArea" id="Ix3-G0-ppq"/>
                    </view>
                    <navigationItem key="navigationItem" title="Profile" id="hxy-GM-njn"/>
                    <connections>
                        <outlet property="clientEmail" destination="k61-f3-g02" id="y6n-pf-D8k"/>
                        <outlet property="clientName" destination="MBv-JG-yof" id="v31-kU-kTB"/>
                        <outlet property="clientProfileImage" destination="HUI-P8-kXc" id="ajr-Pd-AuA"/>
                    </connections>
                </viewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="U3A-Ev-7PV" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
            </objects>
            <point key="canvasLocation" x="1076.8115942028987" y="-46.205357142857139"/>
        </scene>
        <!--Main-->
        <scene sceneID="oW1-jg-fr8">
            <objects>
                <viewControllerPlaceholder storyboardName="Main" id="EWt-WG-dnc" sceneMemberID="viewController"/>
                <placeholder placeholderIdentifier="IBFirstResponder" id="kln-OU-P9X" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
            </objects>
            <point key="canvasLocation" x="1635" y="-48"/>
        </scene>
        <!--Account-->
        <scene sceneID="RBp-9T-9ZL">
            <objects>
                <navigationController storyboardIdentifier="ClientProfile" automaticallyAdjustsScrollViewInsets="NO" useStoryboardIdentifierAsRestorationIdentifier="YES" id="zMj-bx-Scf" sceneMemberID="viewController">
                    <tabBarItem key="tabBarItem" title="Account" image="person.crop.circle.fill" catalog="system" id="Bnj-Ef-Bwn"/>
                    <toolbarItems/>
                    <simulatedTabBarMetrics key="simulatedBottomBarMetrics"/>
                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" largeTitles="YES" id="4JK-MU-kB1">
                        <rect key="frame" x="0.0" y="44" width="414" height="96"/>
                        <autoresizingMask key="autoresizingMask"/>
                        <color key="backgroundColor" systemColor="systemOrangeColor" red="1" green="0.58431372550000005" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                    </navigationBar>
                    <nil name="viewControllers"/>
                    <connections>
                        <segue destination="zst-2p-aBd" kind="relationship" relationship="rootViewController" id="MG3-dO-rBf"/>
                    </connections>
                </navigationController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="dwQ-Sa-ES0" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
            </objects>
            <point key="canvasLocation" x="166.66666666666669" y="-46.205357142857139"/>
        </scene>
    </scenes>
    <resources>
        <image name="person.circle" catalog="system" width="64" height="60"/>
        <image name="person.crop.circle.fill" catalog="system" width="64" height="60"/>
    </resources>
</document>
