<?xml version="1.0" encoding="UTF-8"?>
<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="15705" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="ZfO-Mg-ZbH">
    <device id="retina6_1" orientation="portrait" appearance="light"/>
    <dependencies>
        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="15706"/>
        <capability name="Safe area layout guides" minToolsVersion="9.0"/>
        <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
    </dependencies>
    <scenes>
        <!--Instructor Sign In-->
        <scene sceneID="oR8-HS-GrO">
            <objects>
                <viewController id="uRH-as-SlT" customClass="InstructorSignInViewController" customModule="AnytimeFitness" customModuleProvider="target" sceneMemberID="viewController">
                    <view key="view" contentMode="scaleToFill" id="slf-6K-FRk">
                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="nPK-kR-xGf">
                                <rect key="frame" x="20" y="675" width="374" height="50"/>
                                <color key="backgroundColor" white="0.66666666669999997" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="50" id="o79-Jt-zFM"/>
                                </constraints>
                                <color key="tintColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                <state key="normal" title="Sign In"/>
                                <userDefinedRuntimeAttributes>
                                    <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
                                        <integer key="value" value="5"/>
                                    </userDefinedRuntimeAttribute>
                                </userDefinedRuntimeAttributes>
                                <connections>
                                    <action selector="signInTapped:" destination="uRH-as-SlT" eventType="touchUpInside" id="QBm-Sg-jUV"/>
                                </connections>
                            </button>
                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="25" translatesAutoresizingMaskIntoConstraints="NO" id="Tl4-un-VYy">
                                <rect key="frame" x="20" y="265" width="374" height="93"/>
                                <subviews>
                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Email" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="NTF-hV-Jxn">
                                        <rect key="frame" x="0.0" y="0.0" width="374" height="34"/>
                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                        <textInputTraits key="textInputTraits" keyboardType="emailAddress" textContentType="email"/>
                                    </textField>
                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Password" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="xxo-Qx-nKr">
                                        <rect key="frame" x="0.0" y="59" width="374" height="34"/>
                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                        <textInputTraits key="textInputTraits" secureTextEntry="YES" textContentType="password"/>
                                    </textField>
                                </subviews>
                            </stackView>
                            <button opaque="NO" alpha="0.0" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="SRp-QO-qpl">
                                <rect key="frame" x="145.5" y="735" width="123" height="30"/>
                                <state key="normal" title="Forgot Password?"/>
                            </button>
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Error: Wrong Email/Password" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="08L-Or-JkL">
                                <rect key="frame" x="20" y="388" width="374" height="17"/>
                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                <color key="textColor" systemColor="systemRedColor" red="1" green="0.23137254900000001" blue="0.18823529410000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                <nil key="highlightedColor"/>
                            </label>
                        </subviews>
                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                        <constraints>
                            <constraint firstItem="08L-Or-JkL" firstAttribute="leading" secondItem="gr5-6N-yIb" secondAttribute="leading" constant="20" id="46u-O2-hAQ"/>
                            <constraint firstItem="SRp-QO-qpl" firstAttribute="centerX" secondItem="slf-6K-FRk" secondAttribute="centerX" id="A0i-nB-f35"/>
                            <constraint firstItem="gr5-6N-yIb" firstAttribute="trailing" secondItem="nPK-kR-xGf" secondAttribute="trailing" constant="20" id="A4U-qB-lXg"/>
                            <constraint firstItem="gr5-6N-yIb" firstAttribute="trailing" secondItem="08L-Or-JkL" secondAttribute="trailing" constant="20" id="KzA-LY-dSB"/>
                            <constraint firstItem="08L-Or-JkL" firstAttribute="top" secondItem="Tl4-un-VYy" secondAttribute="bottom" constant="30" id="LzV-nF-blH"/>
                            <constraint firstItem="Tl4-un-VYy" firstAttribute="leading" secondItem="gr5-6N-yIb" secondAttribute="leading" constant="20" id="PEc-YX-Exy"/>
                            <constraint firstItem="SRp-QO-qpl" firstAttribute="top" secondItem="nPK-kR-xGf" secondAttribute="bottom" constant="10" id="R34-Hu-bnG"/>
                            <constraint firstItem="gr5-6N-yIb" firstAttribute="trailing" secondItem="Tl4-un-VYy" secondAttribute="trailing" constant="20" id="aCI-lY-VWr"/>
                            <constraint firstItem="Tl4-un-VYy" firstAttribute="top" secondItem="gr5-6N-yIb" secondAttribute="top" constant="125" id="qDT-hP-kde"/>
                            <constraint firstItem="nPK-kR-xGf" firstAttribute="leading" secondItem="gr5-6N-yIb" secondAttribute="leading" constant="20" id="rVG-Qv-2In"/>
                            <constraint firstItem="gr5-6N-yIb" firstAttribute="bottom" secondItem="nPK-kR-xGf" secondAttribute="bottom" constant="137" id="zGa-cv-z6g"/>
                        </constraints>
                        <viewLayoutGuide key="safeArea" id="gr5-6N-yIb"/>
                    </view>
                    <navigationItem key="navigationItem" title="Instructor Sign In" id="zXe-Ve-GHN"/>
                    <connections>
                        <outlet property="email" destination="NTF-hV-Jxn" id="Ky4-2u-077"/>
                        <outlet property="errorLabel" destination="08L-Or-JkL" id="Mtf-nS-cYD"/>
                        <outlet property="password" destination="xxo-Qx-nKr" id="4Ol-Iu-orV"/>
                        <segue destination="t3z-uo-2gw" kind="presentation" identifier="instructorMain" modalPresentationStyle="fullScreen" id="8ST-pq-tSt"/>
                    </connections>
                </viewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="5GF-qa-wKm" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
            </objects>
            <point key="canvasLocation" x="1071.0144927536232" y="136.60714285714286"/>
        </scene>
        <!--InstructorMain-->
        <scene sceneID="FIA-1W-anv">
            <objects>
                <viewControllerPlaceholder storyboardName="InstructorMain" referencedIdentifier="InstructorMain" id="t3z-uo-2gw" sceneMemberID="viewController"/>
                <placeholder placeholderIdentifier="IBFirstResponder" id="s64-a2-rtM" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
            </objects>
            <point key="canvasLocation" x="1841" y="137"/>
        </scene>
        <!--Navigation Controller-->
        <scene sceneID="U5g-kd-Uus">
            <objects>
                <navigationController storyboardIdentifier="InstructorSignIn" automaticallyAdjustsScrollViewInsets="NO" useStoryboardIdentifierAsRestorationIdentifier="YES" id="ZfO-Mg-ZbH" sceneMemberID="viewController">
                    <toolbarItems/>
                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" largeTitles="YES" id="tFK-Gl-Yno">
                        <rect key="frame" x="0.0" y="44" width="414" height="96"/>
                        <autoresizingMask key="autoresizingMask"/>
                        <color key="backgroundColor" red="0.96971672769999995" green="0.61454814670000002" blue="0.14207831030000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                    </navigationBar>
                    <nil name="viewControllers"/>
                    <connections>
                        <segue destination="uRH-as-SlT" kind="relationship" relationship="rootViewController" id="Rap-eM-3Go"/>
                    </connections>
                </navigationController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="xHs-K9-zEC" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
            </objects>
            <point key="canvasLocation" x="160.86956521739131" y="136.60714285714286"/>
        </scene>
    </scenes>
</document>
