...
            <point key="canvasLocation" x="3483" y="163"/>
        </scene>
        <!--Create-->
        <scene sceneID="KCX-0n-PLs">
            <objects>
                <navigationController storyboardIdentifier="InstructorCreate" automaticallyAdjustsScrollViewInsets="NO" useStoryboardIdentifierAsRestorationIdentifier="YES" id="NOf-x7-W1O" sceneMemberID="viewController">
                    <tabBarItem key="tabBarItem" title="Create" image="Create" id="Xzs-kv-5Yv"/>
                    <toolbarItems/>
                    <simulatedTabBarMetrics key="simulatedBottomBarMetrics"/>
                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" largeTitles="YES" id="xpt-k3-Fi4">
                        <rect key="frame" x="0.0" y="44" width="414" height="96"/>
                        <autoresizingMask key="autoresizingMask"/>
                        <color key="backgroundColor" systemColor="systemOrangeColor" red="1" green="0.58431372550000005" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
...
