...
            <point key="canvasLocation" x="3575" y="114"/>
        </scene>
        <!--Search-->
        <scene sceneID="Pk0-Dj-EeD">
            <objects>
                <navigationController storyboardIdentifier="ClientSearch" automaticallyAdjustsScrollViewInsets="NO" useStoryboardIdentifierAsRestorationIdentifier="YES" id="c57-G6-ZpM" sceneMemberID="viewController">
                    <tabBarItem key="tabBarItem" title="Search" image="magnifyingglass" catalog="system" id="gDX-Jd-Xdn"/>
                    <toolbarItems/>
                    <simulatedTabBarMetrics key="simulatedBottomBarMetrics"/>
                    <navigationBar key="navigationBar" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" largeTitles="YES" id="YAO-ta-uSp">
                        <rect key="frame" x="0.0" y="44" width="414" height="96"/>
                        <autoresizingMask key="autoresizingMask"/>
                        <color key="backgroundColor" systemColor="systemOrangeColor" red="1" green="0.58431372550000005" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
...
